--- a/Script.ipynb
+++ b/Script.ipynb
@@ -27,7 +27,7 @@
     "    'root_folder' :'/content',\n",
     "    'User_folder' : '/content/drive/MyDrive/SD_Forge-Data',\n",
     "    'API_folder': '/content/SD_Forge-WebUI',\n",
-    "    'SDVNFolder': '/content/SD_Forge-WebUI',\n",
+    "    'SD_Forge_Folder': '/content/SD_Forge-WebUI',\n",
     "    'Version':'ComfyUI',\n",
     "    'OptionMode':'base',\n",
     "    'Controlnet':'none',\n",
